--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,9 @@
 <% if user_signed_in? %>
+<%= button_to(
+        "Log Out",
+        destroy_user_session_path,
+        method: :delete
+      ) %>
 <% else %>
   <h1>Hello World</h1>
   <%= link_to "Signup", new_user_registration_path, class: "primary-button" %>
