--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -180,3 +180,40 @@
   color: red;
 }
 // flash messages
+
+// main page
+.main-page-container {
+  display: flex;
+}
+// Sidebar
+.sidebar-container {
+  width: 25%;
+  border-right: 1px solid #d3d3d3;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sidebar-links {
+  margin-top: 20px;
+  list-style: none;
+}
+
+.sidebar-link {
+  display: flex;
+  gap: 20px;
+  padding: 10px;
+  margin-top: 10px;
+  cursor: pointer;
+  width: fit-content;
+  font-size: 18px;
+}
+
+.sidebar-link:hover {
+  border: 1px solid #d3d3d3;
+  border-radius: 15px;
+  background-color: #d3d3d3;
+}
+// Sidebar
+// main page
